style(article): fix font-family / text-align / font-size in article body

--- a/css/style.css
+++ b/css/style.css
@@ -427,9 +427,9 @@ h1 {
 
 .article .article-body {
   margin-top: 35px;
-  text-align: justify !important;
-  font-family: 'Droid Serif', "Source Sans Pro", Calibri, Candara, Arial, sans-serif!important;
-  font-size: 14px;
+  text-align: left !important;
+  font-family: 'Source Serif Pro', serif!important;
+  font-size: 16px;
 }
 
 .article .btn-action {
